<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
        <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
        <spring.boot.openfeign.version>2.0.0.RELEASE</spring.boot.openfeign.version>
        <spring.boot.admin.version>2.0.1</spring.boot.admin.version>
        <java.version>1.8</java.version>
        <spring.cloud.oath2.version>1.2.1.RELEASE</spring.cloud.oath2.version>
        <spring.security.jwt.version>1.0.9.RELEASE</spring.security.jwt.version>
        <zipkin.stream.version>1.3.4.RELEASE</zipkin.stream.version>
        <jjwt.version>0.9.1</jjwt.version>
        <spring.swagger.version>2.9.2</spring.swagger.version>
        <discovery.plugin.version>4.2.5</discovery.plugin.version>
        <service.version>0.0.1-SNAPSHOT</service.version>
        <commons.version>2.6</commons.version>
        <ehcache.version>2.10.4</ehcache.version>
        <guava.verson>19.0</guava.verson>
        <mysql.version>8.0.15</mysql.version>
        <easy.excel.version>1.1.2-beta5</easy.excel.version>
        <lombok.version>1.18.2</lombok.version>
        <gateway.swagger.version>2.9.2</gateway.swagger.version>
        <cloud.ribbon.version>2.1.0</cloud.ribbon.version>
        <jersey.version>1.19.1</jersey.version>
        <spring.tx.version>5.1.2.RELEASE</spring.tx.version>

    </properties>

    <groupId>com.lego</groupId>
    <artifactId>perception-server</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>perception-parent</module>
        <module>framework-parent</module>
    </modules>
    <dependencies>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.58</version>
        </dependency>


    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-openfeign</artifactId>
                <version>${spring.boot.openfeign.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>0.2.1.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>


        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>